--- a/BlogPost.css
+++ b/BlogPost.css
@@ -27,7 +27,7 @@ body
     bottom: 0;
     width: 100%;
     background-color: #1DE9B6;
-    color: white;
+   
     text-align: center;
 }
 #table-scroll 
@@ -36,7 +36,7 @@ body
   overflow:auto;  
   margin-top:20px;
 }
-#table-wrapper table
+#table-wrapper table::before
 {
   width:100%;
 }
@@ -51,11 +51,45 @@ table.t, th, td, th.setoolwidth
     height: 15px;
     top:100px;
 }
-table.t, t
+
+table.t::after
 {
-    height: 12px;
-    overflow-y:scroll;
+  height: 12px;
+  overflow:scroll ;
 }
+h2::first-line{
+  content: "";
+  clear: both;
+  display: block;
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  
+}
+.footer::first-line{
+  color: red;
+  margin:auto;
+  padding: 0%;
+}
+.san::after{
+  content: url(smiley-gif);
+}
+body {
+  background-color: tan;
+}
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+  body {
+    background-color: blue;
+  }
+}
+
+
+
+
+
+
+
 
 
 
